# ariz-gateway

./: .dockerignore  .gitignore  Dockerfile  README.md  TESTING.md  UNIFIED_BACKEND_PLAN.md  fly.toml  package-lock.json  package.json
.github/workflows/: ci.yml  docker-build-and-push.yml
arizcredits/: README.md
arizcredits/sandbox/: upgrade.test.js
arizcredits/src/: bundle.js  operator-deduction.js  web4_get.js
contract/: Cargo.toml  deploy-frontend.sh
contract/src/: lib.rs
contract/src/web4/: handler.rs  index.html.base64
scripts/: build-near-accounting-export.js
server/: git.js  git.test.js  index.js  index.mock.js  index.test.js  rpc.js  store-id.js  store-mount.js  store.test.js
server/accesscontrol/: middleware.js  nep413.js  nep413.test.js  tokenverify.js  tokenverify.test.js
server/api/: coins.json  nearpricehistory.json  prices.js  prices.test.js
server/api/prices/: getDailyPrice.js  index.js  store.js  token-map.js
server/api/prices/providers/: coingecko.js  cryptocompare.js  defillama.js  frankfurter.js
server/arizcredits/: authorization.js  billing.js  billing.test.js  deduct.js  enrollment.js  enrollment.test.js  monitors.js  monitors.test.js
server/public/: index.html  sw.js
tools/: registertoken.js
workers/: README.md  auth-proxy.test.js  base58.js  base58.test.js  near-rpc-proxy.js  near-rpc-proxy.test.js  package-lock.json  package.json  signature.test.js  test-auth-proxy.js  test-signature.js  wrangler.toml
