[package]
name = "ariz-gateway"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = {version = "5.1.0", features = ["unit-testing"]}

[dev-dependencies]
rand = "0.8.5"
ed25519-dalek = "2.1.1"

[profile.release]
lto = true
opt-level = 'z'
debug = false
strip = 'symbols'
